# olympus-sdk-rust

./: CHANGELOG.md  Cargo.toml  LICENSE
src/: apps.rs  client.rs  config.rs  error.rs  http.rs  i18n.rs  identity.rs  lib.rs  session.rs  silent_refresh.rs  tenant.rs
src/constants/: mod.rs  scopes.rs
src/constants/sdk_rust_constants/: mod.rs  roles.rs  scopes.rs
src/services/: admin_billing.rs  admin_cpaas.rs  admin_ether.rs  admin_gating.rs  admin_ops.rs  agent_workflows.rs  ai.rs  auth.rs  business.rs  chaos.rs  commerce.rs  compliance.rs  connect.rs  consent.rs  creator.rs  enterprise_context.rs  ethical_ai.rs  finops.rs  firebase_auth.rs  gating.rs  governance.rs  i18n.rs  identity.rs  maps.rs  messages.rs  mod.rs  pay.rs  platform.rs  pos.rs  smart_home.rs  sms.rs  sre_analytics.rs  tuning.rs  voice.rs  voice_marketplace.rs  voice_orders.rs
tests/: app_scoped_permissions.rs  apps.rs  asp_wave_14c.rs  auth_assign_roles.rs  auth_assign_roles_test.rs  dram_shop_payment_routing.rs  has_scope.rs  i18n_test.rs  identity.rs  identity_test.rs  maps_test.rs  pizza_voice_fanout.rs  plan_details_consent_prompt.rs  scope_registry.rs  silent_refresh.rs  smart_home_test.rs  sms_test.rs  tenant.rs  voice_orders_test.rs  voice_test.rs
tests/fixtures/: assign_roles_dev_e2e.json
tests/golden/: responses.json
