[package]
name = "olympus-sdk"
version = "0.5.2"
edition = "2021"
description = "Official Rust SDK for Olympus Cloud — the AI Business Operating System"
license = "Apache-2.0"
repository = "https://github.com/OlympusCloud/olympus-sdk-rust"
keywords = ["olympus", "cloud", "sdk", "api-client"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
urlencoding = "2"
base64 = "0.22"

[dev-dependencies]
mockito = "1"
wiremock = "0.6"
