[package]
name = "olympus-sdk"
version = "1.0.0-rc1"
edition = "2021"
description = "Official Rust SDK for Olympus Cloud — the AI Business Operating System"
license = "Apache-2.0"
repository = "https://github.com/OlympusCloud/olympus-sdk-rust"
keywords = ["olympus", "cloud", "sdk", "api-client"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
wiremock = "0.6"
